minor alignment fix

--- a/main.css
+++ b/main.css
@@ -105,7 +105,7 @@ p {
 }
 
 footer {
-  margin-top: 25vh;
+  margin-top: 30vh;
   display: flex;
   justify-content: space-around;
 }
